Updated report template to include individual report

--- a/IndividualReport/content/samplebody-conf.tex
+++ b/IndividualReport/content/samplebody-conf.tex
@@ -17,15 +17,15 @@
 
 %Individual Report
 
-%\section{Individual Report}
+\section{Individual Report}
 
-%\input{content/Individual/ExtendedSummary}
+\input{content/Individual/01-ExtendedSummary}
 
-%\input{content/Individual/ProblemDescription}
+\input{content/Individual/02-ProblemDescription}
 
-%\input{content/Individual/SolutionApproach}
+\input{content/Individual/03-SolutionApproach}
 
-%\input{content/Individual/SolutionDescriptionResults}
+\input{content/Individual/04-SolutionDescriptionResults}
 
-%\input{content/Individual/Conclusion}
+\input{content/Individual/05-Conclusion}
 
