--- a/IndividualReport/content/samplebody-conf.tex
+++ b/IndividualReport/content/samplebody-conf.tex
@@ -21,11 +21,13 @@
 
 \input{content/Individual/01-ExtendedSummary}
 
-\input{content/Individual/02-ProblemDescription}
+\input{content/Individual/02-IndividualEditorialForGroupReport.tex}
 
-\input{content/Individual/03-SolutionApproach}
+\input{content/Individual/03-ProblemDescription}
 
-\input{content/Individual/04-SolutionDescriptionResults}
+\input{content/Individual/04-SolutionApproach}
 
-\input{content/Individual/05-Conclusion}
+\input{content/Individual/05-SolutionDescriptionResults}
+
+\input{content/Individual/06-Conclusion}
 
