Individual report Fixes #6

--- a/IndividualReport/bibliography.bib
+++ b/IndividualReport/bibliography.bib
@@ -31,6 +31,7 @@
 @online{xtext-language-configurations,
   author = {Xtext},
   title = {Typical Language Configurations},
+  year = {null},
   url = {https://www.eclipse.org/Xtext/documentation/307_special_languages.html},
   urldate = {2022-05-09}
 }
