--- a/IndividualReport/content/Individual/01-ExtendedSummary.tex
+++ b/IndividualReport/content/Individual/01-ExtendedSummary.tex
@@ -1,6 +1,18 @@
 \subsection*{Extended Summary}
-Write an Extended Summary for the individual report.
-As part of this you must highlight with one bolted point the elements from each of the 3 courses.
 
+This extension of the group report describes the features implemented by Nikolai Emil Damm, during the two weeks after the hand in of the group report. The features are as follows:
 
+\begin{itemize}
+    \item Added Unit Tests to the \acrshort{dsl} and implemented code-generation of Unit Tests in C\# to test the functionality of the Orchestrator.
+    \item Added UPPAAL Queries to the \acrshort{dsl} and implemented code-generation of UPPAAL Queries to the UPPAAL XML project file format.
+    \item Extended the deployment pipeline to run Unit Tests before deploying the Orchestrator.
+\end{itemize}
+
+\noindent The features touch upon the following aspects of \acrshort{sm-iot}, \acrshort{msd}, \acrshort{ssav}:
+
+\begin{itemize}
+    \item \acrshort{sm-iot}: Health Monitoring of services, connectivity, safe deployment of services, auto-deployment of services.
+    \item \acrshort{msd}: Xtext, XTend, Extended Grammar, Code-generation to multiple targets, left-factoring.  
+    \item \acrshort{ssav}: UPPAAL Queries with support for $A[]$, $A<>$, $E[]$, $E<>$, leads to ($\rightarrow$) negation ($!$), conjunction (and/or), and imply.
+\end{itemize}
 
