--- a/IndividualReport/content/Individual/05-SolutionDescriptionResults.tex
+++ b/IndividualReport/content/Individual/05-SolutionDescriptionResults.tex
@@ -1,2 +1,24 @@
 \subsection{Solution Description and Results}
+
+The solution consists of a long set of changes to the \acrshort{dsl}, code-generation of the Orchestrator and UPPAAL Project, and the deployment pipeline. All changes made are documented in \refappendix{appendix:individual-feature-list-of-changes}.
+
+\subsubsection{Adding Unit Tests}
+
+To support defining Unit Tests in the \acrshort{dsl}, the grammar is extended with 
+
+\subsubsection*{Testing correctness of the Orchestrator}
+
+\subsubsection*{Testing connectivity of the Orchestrator}
+
 Describe the solution, test, and evaluation results (note: remember to refer to what the video covers).
+
+\subsubsection{Adding Dynamic UPPAAL Queries}
+
+all paths
+one path
+eventually/forever
+leads to
+imply
+negation
+
+
