--- a/IndividualReport/content/samplebody-conf.tex
+++ b/IndividualReport/content/samplebody-conf.tex
@@ -16,8 +16,18 @@
 \input{content/Group/07-Conclusion}
 
 %Individual Report
+\newpage
+\begin{center}
+    {\Large Nikolai Emil Damm,}\\
+    University of Southern Denmark,\\
+    Odense, Denmark,\\
+    \href{mailto:nidam16@student.sdu.dk}{nidam16@student.sdu.dk}
+\end{center}
+\vspace{0.9pt}
 
 \section{Individual Report}
+
+
 
 \input{content/Individual/01-ExtendedSummary}
 
