--- a/IndividualReport/main.tex
+++ b/IndividualReport/main.tex
@@ -36,6 +36,7 @@
 \input{appendix/factory-language.tex}
 \input{appendix/orchestrator.tex}
 \input{appendix/requirements.tex}
+\input{appendix/individual-features-changes.tex}
 \input{appendix/logging}
 \input{appendix/course-objectives.tex}
 \input{appendix/uppaal-templates.tex}
