--- a/IndividualReport/content/Individual/02-IndividualEditorialForGroupReport.tex
+++ b/IndividualReport/content/Individual/02-IndividualEditorialForGroupReport.tex
@@ -1,13 +1,31 @@
-\subsection*{Individual Editorial for Group Report}
-Provide editorial statements on have you have contributed to the group report. 
-It should cover at least these areas of the project work:
+\subsection*{Individual Editorial}
+
+Throughout the project I have participated and contributed to the following areas:
+
 \begin{itemize}
     \item Idea
-    \item Product/prototype on aspects from each of the 3 courses on:
-\begin{itemize}
-    \item Analysis of the work
-    \item Design of the work
-    \item Interpretation of results
-\end{itemize}
+    \begin{itemize}
+        \item Participating in discussions to formulate the idea.
+        \item Documenting the idea with UML, notes etc.
+    \end{itemize}
+    \item Product/prototype
+    \begin{itemize}
+        \item Designing and constructing the crane including the hardware and software.
+        \item Designing and implementing the \acrshort{dsl} (FactoryLang).
+        \item Designing and code-generating the Orchestrator.
+        \item Setting up a CI/CD workflow.
+        \item Connecting to and working with MQTT.
+        \item Testing and debugging the crane and its sensors.
+        \item Testing and debugging the system as a whole.
+        \item Benchmarking of the crane's lifting capabilities.
+    \end{itemize}
     \item Group Report
+    \begin{itemize}
+        \item Problem and Objective
+        \item Problem Description
+        \item Solution Approach (\% 1.3.2, 1.3.3)
+        \item Solution Description and Results (\% 1.4.1, 1.4.4)
+        \item Discussion
+        \item Conclusion
+    \end{itemize}
 \end{itemize}
