--- a/IndividualReport/content/Individual/02-IndividualEditorialForGroupReport.tex
+++ b/IndividualReport/content/Individual/02-IndividualEditorialForGroupReport.tex
@@ -1,31 +1,23 @@
+\vspace{-10pt}
 \subsection*{Individual Editorial}
 
-Throughout the project I have participated and contributed to the following areas:
+I have participated and contributed to the following areas of the full project:
 
-\begin{itemize}
-    \item Idea
-    \begin{itemize}
-        \item Participating in discussions to formulate the idea.
-        \item Documenting the idea with UML, notes etc.
-    \end{itemize}
-    \item Product/prototype
-    \begin{itemize}
-        \item Designing and constructing the crane including the hardware and software.
-        \item Designing and implementing the \acrshort{dsl} (FactoryLang).
-        \item Designing and code-generating the Orchestrator.
-        \item Setting up a CI/CD workflow.
-        \item Connecting to and working with MQTT.
-        \item Testing and debugging the crane and its sensors.
-        \item Testing and debugging the system as a whole.
-        \item Benchmarking of the crane's lifting capabilities.
-    \end{itemize}
-    \item Group Report
-    \begin{itemize}
-        \item Problem and Objective
-        \item Problem Description
-        \item Solution Approach (\% 1.3.2, 1.3.3)
-        \item Solution Description and Results (\% 1.4.1, 1.4.4)
-        \item Discussion
-        \item Conclusion
-    \end{itemize}
+\begin{itemize}[leftmargin=*]
+    \item Idea - Participating in discussions to formulate the idea.
+    \item Idea - Documenting the idea with UML, notes etc.
+    \item Product/prototype -  Designing and constructing the crane including the hardware and software.
+    \item Product/prototype -  Designing and implementing the \acrshort{dsl}.
+    \item Product/prototype -  Designing and code-generating the Orchestrator.
+    \item Product/prototype -  Setting up a CI/CD workflow.
+    \item Product/prototype -  Connecting to and working with MQTT.
+    \item Product/prototype -  Testing and debugging the crane and its sensors.
+    \item Product/prototype -  Testing and debugging the system as a whole.
+    \item Product/prototype -  Benchmarking of the crane's lifting capabilities.
+    \item Group Report - Problem and Objective
+    \item Group Report - Problem Description
+    \item Group Report - Solution Approach (\% 1.3.2, 1.3.3)
+    \item Group Report - Solution Description and Results (\% 1.4.1, 1.4.4)
+    \item Group Report - Discussion
+    \item Group Report - Conclusion
 \end{itemize}
