--- a/IndividualReport/content/Individual/06-Conclusion.tex
+++ b/IndividualReport/content/Individual/06-Conclusion.tex
@@ -1,2 +1,7 @@
 \subsection{Conclusion}
-Short conclusion summarizing the project, achieved solution and results.
+
+The group project has been extended with Unit Tests and UPPAAL Queries to make the system testable. Furthermore, the deployment pipeline has been extended to include running the Unit Tests before deployment.
+
+The new features improve the trustworthiness of the system, as it is now easier for end-users to test the system, and ensure that the system runs reliably and according to requirements. Furthermore, it is safer to deploy the system, as specified tests ensure that required services are available and that the system runs as expected before deployment.
+
+\newpage
