--- a/IndividualReport/main.tex
+++ b/IndividualReport/main.tex
@@ -28,13 +28,16 @@
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{bibliography}
 
+\raggedbottom
 \printnoidxglossary[type=\acronymtype]
 %\printglossary
 
 \input{appendix/appendix.tex}
 \input{appendix/system-overview.tex}
 \input{appendix/factory-language.tex}
+\input{appendix/factory-language-updated.tex}
 \input{appendix/orchestrator.tex}
+\input{appendix/orchestrator-updated.tex}
 \input{appendix/requirements.tex}
 \input{appendix/individual-features-changes.tex}
 \input{appendix/logging}
