--- a/IndividualReport/bibliography.bib
+++ b/IndividualReport/bibliography.bib
@@ -36,6 +36,57 @@
   urldate = {2022-05-09}
 }
 
+@misc{crontab,
+  author       = "Admin's Choice",
+  title        = "Crontab – Quick Reference",
+  year = 2022,
+  howpublished = {\url{https://www.adminschoice.com/crontab-quick-reference}}
+}
+
+@misc{uppaal-docs,
+  author       = "UPPAAL",
+  title        = "UPPAAL Docs",
+  year = 2022,
+  howpublished = {\url{https://docs.uppaal.org}}
+}
+
+@misc{docker-swarm,
+  author       = "Docker",
+  title        = "Swarm mode overview",
+  year = 2022,
+  howpublished = {\url{https://docs.docker.com/engine/swarm/}}
+}
+
+@misc{hashicorp-nomad,
+  author       = "Hashicorp Nomad",
+  title        = "Hashicorp Nomad",
+  year = 2022,
+  howpublished = {\url{https://www.nomadproject.io}}
+}
+
+@misc{kubernetes,
+  author       = "Kubernetes",
+  title        = "Kubernetes",
+  year = 2022,
+  howpublished = {\url{https://kubernetes.io}}
+}
+
+@online{dotnet-project-structure,
+  author = {Microsoft},
+  title = {Organize your project to support both .NET Framework and .NET},
+  year = {2021},
+  url= {https://docs.microsoft.com/en-us/dotnet/core/porting/project-structure},
+  urldate = {2022-05-29}
+}
+
+@online{github-actions-docs,
+  author = {GitHub},
+  title = {GitHub Actions},
+  year = {2022},
+  url= {https://docs.github.com/en/actions},
+  urldate = {2022-05-29}
+}
+
 @article{802.11,
     author={},
     journal={IEEE Std 802.11g-2003 (Amendment to IEEE Std 802.11, 1999 Edn. (Reaff 2003) as amended by IEEE Stds 802.11a-1999, 802.11b-1999, 802.11b-1999/Cor 1-2001, and 802.11d-2001)},
