--- a/IndividualReport/content/Individual/01-ExtendedSummary.tex
+++ b/IndividualReport/content/Individual/01-ExtendedSummary.tex
@@ -12,12 +12,12 @@ The extended features to the system touch upon the following aspects of \acrshor
 
 A video demonstrating the new features is available as an attachment to the project handin. The video demonstrates the new features in the following order:
 
-\begin{itemize}[leftmargin=*]
+\begin{enumerate}[leftmargin=*]
     \item Showing the updated Grammar for the DSL. (See \refappendix{appendix:grammar-language-updated})
-    \item Showing the DSL in action; how to define a new service, create a Unit Test, or create a UPPAAL Query. (See \refappendix{appendix:fl-updated})
+    \item Showing the actual DSL. (See \refappendix{appendix:fl-updated})
     \item Showing the new code generated Orchestrator. (See the GitHub repository)
     \item Showing the code generated queries in the UPPAAL project.
     \item Show the deployment pipeline, and how  unit tests are executed as part of it.
-\end{itemize}
+\end{enumerate}
 
 All the source code is available from the forked GitHub repository \href{https://github.com/devantler/software-engineering-f22-individual}{https://github.com/devantler/software-engineering-f22-individual}.
